--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <div class="input-block">
-      <input id="entrada" type="text" />
+      <input id="todoInput" type="text" />
       <button id="addBtn">Adicionar</button>
     </div>
     <div class="list-block">
